Revert "switch to jvm"
This reverts commit 77e94bdc2d5648dbb9c3c98d67d3053bc817d160.